--- a/css/main-snake.css
+++ b/css/main-snake.css
@@ -3,14 +3,20 @@ JavaScript Snake
 By Patrick Gillespie
 http://patorjk.com/games/snake
 */
+
+* {
+    font-family: "Source Sans Pro", sans-serif !important;
+    font-weight: 400;
+}
+
 body {
-	margin:0px;
-	padding:0px;
+    margin: 0;
+    padding: 0;
 }
 
 #game-area {
-	margin:0px;
-	padding:0px;
+    margin: 0;
+    padding: 0;
 }
 
 #high-score {
@@ -21,93 +27,118 @@ body {
 
 #mode-wrapper {
     color: #ffffff;
-    font-family: Verdana, arial, helvetica, sans-serif; 
+    font-family: Verdana, arial, helvetica, sans-serif;
     font-size: 14px;
-    
+    background-color: #2c3e50;
+
 }
 
-#game-area:focus { outline: none; }
+.difficulty-btn:active {
+    background: #1a723f;
+}
+
+.difficulty-btn {
+    border: 1px solid #27ae60;
+    background: #27ae60;
+    color: #fafafa;
+    font-size: 0.8rem;
+
+}
+
+#game-area:focus {
+    outline: none;
+}
 
 a.snake-link, a.snake-link:link, a.snake-link:visited {
-  color: #FCFC54; 
+    color: #27ae60;
 }
 
 a.snake-link:hover {
-  color: #FfFf54; 
+    color: #27ae60;
 }
 
 .snake-pause-screen {
-    font-family: Verdana, arial, helvetica, sans-serif; 
+    font-family: Verdana, arial, helvetica, sans-serif;
     font-size: 14px;
-    position:absolute;
-    width:300px;
-    height:80px;
-    text-align:center;
-    top:50%;
-    left:50%;
-    margin-top:-40px;
-    margin-left:-150px;
-    display:none;
-    background-color:black;
-    color:white;
+    position: absolute;
+    width: 300px;
+    height: 80px;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    margin-top: -40px;
+    margin-left: -150px;
+    display: none;
+    background-color: black;
+    color: white;
 }
 
 .snake-panel-component {
     position: absolute;
-    font-family: Verdana, arial, helvetica, sans-serif; 
+    font-family: Verdana, arial, helvetica, sans-serif;
     font-size: 14px;
     color: #ffffff;
     text-align: center;
-    background-color: #FC5454;
+    background-color: #2c3e50;
     padding: 8px;
-    margin: 0px;
+    margin: 0;
 }
 
 .snake-snakebody-block {
-    margin: 0px;
-    padding: 0px;
-    background-color: #FF0000;
+    margin: 0;
+    padding: 0;
+    background-color: #27ae60;
     position: absolute;
-    border: 0px solid #000080;
+    border: 0 solid #000080;
     background-repeat: no-repeat;
 }
 
 .snake-snakebody-alive {
-   background-image: url('./images/snakeblock.png');
+    background-image: url('./images/snakeblock.png');
 }
+
 .snake-snakebody-dead {
-   background-image: url('./images/deadblock.png');
+    background-image: url('./images/deadblock.png');
 }
 
 .snake-food-block {
-    margin: 0px;
-    padding: 0px;
-    background-color: #FF0000;
-    border: 0px solid #000080;
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    border: 0 solid transparent;
     position: absolute;
+
+}
+
+.snake-food-block:after {
+    content: "\2666";
+    left: 0;
+    color: #f1c40f;
+    position: absolute;
+    top: 0;
 }
 
 .snake-playing-field {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     position: absolute;
-    background-color: #0000A8;
-    border: 0px solid #0000A8;
+    background-color: #2c3e50;
+    border: 0 solid #2c3e50;
 }
 
 .snake-game-container {
-    margin: 0px;
-    padding: 0px;
-    border-width: 0px;
+    margin: 0;
+    padding: 0;
+    border-width: 0;
     border-style: none;
     zoom: 1;
-    background-color: #FC5454;
+    background-color: #34495e;
     position: relative;
 }
-            
+
 .snake-welcome-dialog {
     padding: 8px;
-    margin: 0px;
+    margin: 0;
     background-color: #000000;
     color: #ffffff;
     font-family: Verdana, arial, helvetica, sans-serif;
@@ -125,7 +156,7 @@ a.snake-link:hover {
 
 .snake-try-again-dialog {
     padding: 8px;
-    margin: 0px;
+    margin: 0;
     background-color: #000000;
     color: #ffffff;
     font-family: Verdana, arial, helvetica, sans-serif;
@@ -139,4 +170,4 @@ a.snake-link:hover {
     margin-left: -158px;
     text-align: center;
     display: none;
-    }
+}
